sfdx-source/main/default/objects/TED_TeleECCase__e/fields/caseNum__c.field-meta.xml
<CustomField>
    <fullName>caseNum__c</fullName>
    <label>caseNum</label>
    <length>12</length>
    <type>Text</type>
</CustomField>