sfdx-source/main/default/objects/TED_TeleECCase__e/fields/eventType__c.field-meta.xml
<CustomField>
    <fullName>eventType__c</fullName>
    <label>eventType</label>
    <length>128</length>
    <type>Text</type>
</CustomField>