sfdx-source/main/default/objects/TED_TeleECCase__e/fields/VISN__c.field-meta.xml
<CustomField>
    <fullName>VISN__c</fullName>
    <label>VISN</label>
    <length>32</length>
    <type>Text</type>
</CustomField>